--- a/main_modules/docker-compose.yaml
+++ b/main_modules/docker-compose.yaml
@@ -25,3 +25,5 @@ services:
     environment:
       ELASTICSEARCH_HOSTS: http://elasticsearch:${ELASTICSEARCH_PORT}
       I18N_LOCALE: ja-JP
+    depends_on:
+      - es
